--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,40 +1,36 @@
-name: Release Obsidian plugin
+name: Release
 
 on:
-  push:
-    tags:
-      - "*"
+  workflow_dispatch:
 
 permissions:
   contents: write
 
-env:
-  PLUGIN_NAME: obsidian-meeting-note-creator
-
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "18.x"
 
-      - name: Build plugin
+      - name: Build
         run: |
-          npm install
+          npm ci
           npm run build
 
-      - name: Create release
+      - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          tag="${GITHUB_REF#refs/tags/}"
+          version=$(node -p "require('./package.json').version")
 
-          gh release create "$tag" \
-            --title="$tag" \
-            --draft \
+          gh release create "v$version" \
+            --title "v$version" \
+            --generate-notes \
             main.js manifest.json styles.css
