--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "obsidian-meeting-note-creator",
-	"version": "1.0.0",
+	"version": "0.0.3",
 	"description": "Create structured meeting notes with templates and automatic formatting",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"release": "npm version patch && git push && git push --tags"
+		"release": "npm version patch && git push"
 	},
 	"keywords": [
 		"obsidian",
