--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           version=$(node -p "require('./package.json').version")
 
-          gh release create "v$version" \
-            --title "v$version" \
+          gh release create "$version" \
+            --title "$version" \
             --generate-notes \
             main.js manifest.json styles.css
